--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -77,6 +77,9 @@ header {
     .logo {
         font-size: 8px;
     }
+    .navigation-bar .links{
+        display: none;
+    }
 
     .hamburger-menu button {
         width: 50px;
@@ -86,10 +89,14 @@ header {
     }
 }
 
-@media only screen and (max-width:440px) {
+@media only screen and (max-width:380px) {
     .navigation-bar {
-        display: block;
+        display: flex;
         padding: 5px;
+        gap: 20px;
+        align-items: center;
+        justify-content: space-between;
+
     }
 
     .hamburger-menu button {
@@ -254,7 +261,7 @@ header {
     margin-top: 20px;
 }
 
-.card {
+#portfolio .card {
     width: 100%;
     height: 300px;
     border-radius: 8px;
